--- a/web-developer.html
+++ b/web-developer.html
@@ -42,7 +42,7 @@
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/impinj/job/oAA3afw7'>Impinj Careers - Front End Web Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/impinj/job/oAA3afw7'>Impinj Careers - Front End Web Developer</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -108,7 +108,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GlobeAir/743999698356722-web-developer'>GlobeAir WEB DEVELOPER | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GlobeAir/743999698356722-web-developer'>GlobeAir WEB DEVELOPER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -138,7 +138,7 @@
 <p><span class="badge badge-light">North America North America</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=ovV5afwp&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=n3kNmMwN'>Compuware Careers - Entry-level Web Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=ovV5afwp&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=n3kNmMwN'>Compuware Careers - Entry-level Web Developer</a></h5> 
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -194,7 +194,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/coolblueweb-looking-for-us-based-remote-laravel-php-wordpress-developer/'>coolblueweb looking for US Based Remote - Laravel/PHP/WordPress Developer</a></h5> 
+<h5><a href='https://dedeleads.com/job/coolblueweb-looking-for-us-based-remote-laravel-php-wordpress-developer/'>coolblueweb looking for US Based Remote - Laravel/PHP/WordPress Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -270,7 +270,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://ongoing.join.com/jobs/461804-senior-web-developer-80-100-oder-nach-vereinbarung'>Job @ ongoing (Zug): ??? Senior Web-Developer 80-1... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ongoing.join.com/jobs/461804-senior-web-developer-80-100-oder-nach-vereinbarung'>Job @ ongoing (Zug): ??? Senior Web-Developer 80-1... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -332,7 +332,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://serviceplan.softgarden.io/job/1175416/Werkstudent-Web-Development-E-Dialog-m-w-x-?jobDbPVId=14270842&amp;l=en'>Werkstudent Web Development / E-Dialog (m/w/x)</a></h5> 
+<h5><a href='https://serviceplan.softgarden.io/job/1175416/Werkstudent-Web-Development-E-Dialog-m-w-x-?jobDbPVId=14270842&amp;l=en'>Werkstudent Web Development / E-Dialog (m/w/x)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
